# itranslator

./: README.md  pyproject.toml  setup.py  test.py
itranslator/: __init__.py  asyncio.py  errors.py  exceptions.py  itranslator.py  languages.json
